@@ -3,10 +3,10 @@ use ExtUtils::MakeMaker;
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
 WriteMakefile(
-    NAME              => 'Template::Event',
-    VERSION_FROM      => 'lib/Template/Event.pm', # finds $VERSION
+    NAME              => 'Async::Template',
+    VERSION_FROM      => 'lib/Async/Template.pm', # finds $VERSION
     PREREQ_PM         => {}, # e.g., Module::Name => 1.1
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
-      (ABSTRACT_FROM  => 'lib/Template/Event.pm', # retrieve abstract from module
+      (ABSTRACT_FROM  => 'lib/Async/Template.pm', # retrieve abstract from module
        AUTHOR         => 'Serguei Okladnikov oklas@span.org') : ()),
 );
