@@ -1,4 +1,4 @@
-Template-Event version 0.01
+Async-Template version 0.01
 ===========================
 
 The README is used to introduce the module and provide instructions on
